fixed layout alignment in navigation

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.scss
@@ -177,7 +177,7 @@ cds-header-item {
     SIDEBAR STYLE
 --------------------------------------------------- */
 
-$sidebar-width: 20.8rem;
+$sidebar-width: 16rem;
 
 .wrapper {
   display: flex;
@@ -195,7 +195,7 @@ $sidebar-width: 20.8rem;
     z-index: 999;
 
     &.active {
-      margin-left: -$sidebar-width;
+      margin-left: 3rem -$sidebar-width;
     }
   }
 }
